--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.exposed:exposed:0.14.1"
+    implementation "org.jetbrains.exposed:exposed:$exposed_version"
+    implementation "io.ktor:ktor-server-core:$ktor_version"
+    implementation "io.ktor:ktor-server-netty:$ktor_version"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
