--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 kotlin.code.style=official
-
-exposed_version = 0.14.1
-ktor_version = 1.2.2
+exposed_version=0.14.1
+kodein_version=6.3.3
+ktor_version=1.2.2
+slf4j_version=1.7.5
