--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 kotlin.code.style=official
 exposed_version=0.14.1
+jackson_version=2.9.9
+junit5_version=5.5.1
 kodein_version=6.3.3
+kotlintest_runner_junit5_version=3.4.0
 ktor_version=1.2.2
 slf4j_version=1.7.5
