--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,6 @@ jackson_version=2.9.9
 junit5_version=5.5.1
 kodein_version=6.3.3
 kotlintest_runner_junit5_version=3.4.0
+kotlin_logging_version=1.6.26
 ktor_version=1.2.2
 slf4j_version=1.7.5
