--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ dependencies {
     implementation "org.slf4j:slf4j-api:$slf4j_version"
     implementation "org.slf4j:slf4j-simple:$slf4j_version"
     implementation "io.github.microutils:kotlin-logging:$kotlin_logging_version"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junit5_version"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:$junit5_version"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit5_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
 }
 
 compileKotlin {
@@ -26,6 +31,10 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.freeCompilerArgs = ["-Xjsr305=strict"]
     kotlinOptions.jvmTarget = JavaVersion.VERSION_11
+}
+
+test {
+    useJUnitPlatform()
 }
 
 kotlinter {
