--- a/component-test/build.gradle
+++ b/component-test/build.gradle
@@ -6,6 +6,7 @@ plugins {
 dependencies {
     testImplementation "org.slf4j:slf4j-api:$slf4j_version"
     testImplementation "org.slf4j:slf4j-simple:$slf4j_version"
+    testImplementation "io.github.microutils:kotlin-logging:$kotlin_logging_version"
     testImplementation "io.kotlintest:kotlintest-runner-junit5:$kotlintest_runner_junit5_version"
     testImplementation "io.ktor:ktor-client-core:$ktor_version"
     testImplementation "io.ktor:ktor-client-apache:$ktor_version"
